--- a/public/index.html
+++ b/public/index.html
@@ -10,14 +10,14 @@
       content="React clone of Book My Show website with tailwind css."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-
+  
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
-    <title>Book My Show Clone 10567</title>
+  
+    <title>Book My Show Clone</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+    
   </body>
 </html>
